Pagination, cleanup
working prototype, just needs debugging and stuff...
