# monorepo/services/jobs/src/schemas/searchRequest.schema.ts
@@ -96,12 +96,6 @@ export default {
       minimum: 0,
       description: 'Starting point for pagination',
     },
-    aggsOnly: {
-      type: 'boolean',
-    },
-    default: {
-      type: 'boolean',
-    },
   },
   additionalProperties: false,
   allOf: [
